force-app/main/default/objects/LMS_FinanceInformation__c/LMS_FinanceInformation__c.object-meta.xml
<CustomObject>
    <description>Finance information related to the Lead or Quote.</description>
    <label>Finance Information</label>
    <nameField>
        <displayFormat>FI-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Finance Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>