force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_CreditTimeUoM__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_CreditTimeUoM__c</fullName>
    <description>Finance Credit Time Unit of Measure</description>
    <inlineHelpText>Finance Credit Time Unit of Measure</inlineHelpText>
    <label>Credit Time Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>