force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_EffectiveRate__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_EffectiveRate__c</fullName>
    <description>Effective Rate of Interest</description>
    <inlineHelpText>Effective Rate of Interest</inlineHelpText>
    <label>Effective Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>