force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_GoldstarEditable__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_GoldstarEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goldstar Editable</label>
    <type>Checkbox</type>
</CustomField>