force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_InstallmentAndInterestGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_InstallmentAndInterestGrossAmt__c</fullName>
    <description>Installment and Interest Gross Amt</description>
    <inlineHelpText>Installment and Interest Gross Amt</inlineHelpText>
    <label>Installment and Interest Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>