force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_InstallmentAndIntTotalGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_InstallmentAndIntTotalGrossAmt__c</fullName>
    <description>installment and interest total gross amt</description>
    <inlineHelpText>installment and interest total gross amt</inlineHelpText>
    <label>Inst and Int Total Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>