force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_installmentFirstGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_installmentFirstGrossAmount__c</fullName>
    <description>Installment first gross amount</description>
    <inlineHelpText>Installment first gross amount</inlineHelpText>
    <label>Monthly Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>