force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_InstallmentIntGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_InstallmentIntGrossAmt__c</fullName>
    <description>Installment Interest Gross Amount</description>
    <inlineHelpText>Installment Interest Gross Amount</inlineHelpText>
    <label>inst interest gross amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>