force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_InstallmentLastGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_InstallmentLastGrossAmt__c</fullName>
    <description>Installment Last Gross Amount</description>
    <inlineHelpText>Installment Last Gross Amount</inlineHelpText>
    <label>Inst Last Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>