force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_jlrFinancedAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_jlrFinancedAmt__c</fullName>
    <description>Amount financed by Jlr</description>
    <inlineHelpText>Amount financed by Jlr</inlineHelpText>
    <label>JlR Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>