force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_jlrFirstMonthlyInstallment__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_jlrFirstMonthlyInstallment__c</fullName>
    <description>First Month Installment paid by JLR</description>
    <inlineHelpText>First Month Installment paid by JLR</inlineHelpText>
    <label>Jlr First Monthly Inst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>