force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_jlrLastMonthlyInstallment__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_jlrLastMonthlyInstallment__c</fullName>
    <description>Last Installment to be paid by JLR</description>
    <inlineHelpText>Last Installment to be paid by JLR</inlineHelpText>
    <label>Jlr Last Monthly Inst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>