force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_jlrMonthlyInstallments__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_jlrMonthlyInstallments__c</fullName>
    <description>Jlr Monthly Installments</description>
    <inlineHelpText>Jlr Monthly Installments</inlineHelpText>
    <label>Jlr Monthly Insyt</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>