force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_jlrTotalCostOfCredit__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_jlrTotalCostOfCredit__c</fullName>
    <description>JLR Total Cost of Credit</description>
    <inlineHelpText>JLR Total Cost of Credit</inlineHelpText>
    <label>Jlr Total Cost of Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>