force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_LegalText__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_LegalText__c</fullName>
    <description>Legal Document Text</description>
    <inlineHelpText>Legal Document Text</inlineHelpText>
    <label>Legal Document</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>