force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_LegalTitle__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_LegalTitle__c</fullName>
    <description>Legal Document Title</description>
    <inlineHelpText>Legal Document Title</inlineHelpText>
    <label>Legal Document Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>