force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_NominalRate__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_NominalRate__c</fullName>
    <description>Finance nominal Rate of interest</description>
    <inlineHelpText>Finance nominal Rate of interest</inlineHelpText>
    <label>Nominal Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>