force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_ToBeFinancedGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_ToBeFinancedGrossAmt__c</fullName>
    <description>Finance Gross Amount to be Financed</description>
    <inlineHelpText>Finance Gross Amount to be Financed</inlineHelpText>
    <label>To be Financed Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>