force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_TotalFinancedGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_TotalFinancedGrossAmt__c</fullName>
    <description>Total Financed Gross Amount</description>
    <inlineHelpText>Total Financed Gross Amount</inlineHelpText>
    <label>Total Financed Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>