force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_TotalGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_TotalGrossAmt__c</fullName>
    <description>Total Gross Amount</description>
    <inlineHelpText>Total Gross Amount</inlineHelpText>
    <label>Total Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>