force-app/main/default/objects/LMS_FinanceInformation__c/fields/ERPT_FIN_TotalInterestGrossAmt__c.field-meta.xml
<CustomField>
    <fullName>ERPT_FIN_TotalInterestGrossAmt__c</fullName>
    <description>Total Interest gross Amount</description>
    <inlineHelpText>Total Interest gross Amount</inlineHelpText>
    <label>Total Int Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>