force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_Age_Range__c.field-meta.xml
<CustomField>
    <fullName>GOL_Age_Range__c</fullName>
    <label>Age Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>