force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_Channel__c.field-meta.xml
<CustomField>
    <fullName>GOL_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>TELESALES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>