force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_FIN_Finance_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>GOL_FIN_Finance_Product_Description__c</fullName>
    <label>Finance Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>