force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_JLR_ID__c.field-meta.xml
<CustomField>
    <fullName>GOL_JLR_ID__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>GOL JLR ID</label>
    <type>AutoNumber</type>
</CustomField>