force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_JLR_QUOTE_FIN_ID__c.field-meta.xml
<CustomField>
    <fullName>GOL_JLR_QUOTE_FIN_ID__c</fullName>
    <description>This field to display QuoteId - count of Fin info records e.g(a123213132 - 001) Which will be using in golQuotationOverview</description>
    <label>GOL JLR FIN ID</label>
    <length>99</length>
    <type>Text</type>
</CustomField>