force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>GOL_Person_Type__c</fullName>
    <label>Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PHYSICAL</fullName>
            </value>
            <value>
                <fullName>LEGAL</fullName>
            </value>
            <value>
                <fullName>SELF-EMPLOYED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>