force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_Type_Of_Use__c.field-meta.xml
<CustomField>
    <fullName>GOL_Type_Of_Use__c</fullName>
    <label>Type Of Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRIVATE</fullName>
            </value>
            <value>
                <fullName>PROFESSIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>