force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_View_Quote_Details__c.field-meta.xml
<CustomField>
    <fullName>GOL_View_Quote_Details__c</fullName>
    <description>For Full Finance Integration
This field to store the Quote details from response after a callout from Get Quote API</description>
    <label>GOL View Quote Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>