force-app/main/default/objects/LMS_FinanceInformation__c/fields/GOL_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>GOL_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>