force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_AmountInWords__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_AmountInWords__c</fullName>
    <description>Required when manually inputting a deposit value as a form of validation.</description>
    <label>Deposit Amount in Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>