force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Annual_Contract_Mileage__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Annual_Contract_Mileage__c</fullName>
    <description>Expected annual mileage for Contract.</description>
    <inlineHelpText>Expected annual mileage for Contract.</inlineHelpText>
    <label>Annual Contract Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>