force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_APR__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_APR__c</fullName>
    <label>APR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>