force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Balloon__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Balloon__c</fullName>
    <description>Granted Future Value or Balloon Payment</description>
    <label>Balloon Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>