force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_CentralFinancing__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_CentralFinancing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Central renewal information</description>
    <label>Central Renewal</label>
    <type>Checkbox</type>
</CustomField>