force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Contract_Start_Date__c</fullName>
    <description>Contract Start Date</description>
    <inlineHelpText>Contract Start Date</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>