force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Deposit__c</fullName>
    <description>Total deposit paid by customer not including any deposit allowance.</description>
    <inlineHelpText>Total deposit paid by customer not including any deposit allowance.</inlineHelpText>
    <label>Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>