force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_DepositDescription__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_DepositDescription__c</fullName>
    <description>Description of the deposit</description>
    <label>Deposit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>