force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_DerivativeDescription__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_DerivativeDescription__c</fullName>
    <label>Derivative Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>