force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_End_of_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_End_of_Term_Date__c</fullName>
    <description>End of Term Date of Contract</description>
    <inlineHelpText>End of Term Date of Contract</inlineHelpText>
    <label>End of Term Date</label>
    <type>Date</type>
</CustomField>