force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Equity__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Equity__c</fullName>
    <label>Equity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>