force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Finance_Product__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Finance_Product__c</fullName>
    <description>Type of finance product.</description>
    <inlineHelpText>Type of finance product.</inlineHelpText>
    <label>Finance Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long term hire</fullName>
            </value>
            <value>
                <fullName>Hire purchase agreement</fullName>
            </value>
            <value>
                <fullName>Banker&apos;s draft</fullName>
            </value>
            <value>
                <fullName>Conventional Loan</fullName>
            </value>
            <value>
                <fullName>Standard Hire Purchase</fullName>
            </value>
            <value>
                <fullName>Contract Hire</fullName>
            </value>
            <value>
                <fullName>Balloon Hire Purchase</fullName>
            </value>
            <value>
                <fullName>Personal Contract Plan</fullName>
            </value>
            <value>
                <fullName>Personal Contract Hire</fullName>
            </value>
            <value>
                <fullName>Standard Loan</fullName>
            </value>
            <value>
                <fullName>Subvented Loan</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Standard Lease</fullName>
            </value>
            <value>
                <fullName>Subvented Lease</fullName>
            </value>
            <value>
                <fullName>Single Paid Lease</fullName>
            </value>
            <value>
                <fullName>Advance Payment Plan</fullName>
            </value>
            <value>
                <fullName>Annual Installment</fullName>
            </value>
            <value>
                <fullName>Post Dated Cheque</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>