force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Finance_Provider__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Finance_Provider__c</fullName>
    <description>Company name of the Financial Partner providing the financial product.</description>
    <inlineHelpText>Company name of the Financial Partner providing the financial product.</inlineHelpText>
    <label>Finance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FGA</fullName>
            </value>
            <value>
                <fullName>ST JAMES</fullName>
            </value>
            <value>
                <fullName>WOORI</fullName>
            </value>
            <value>
                <fullName>LEX AUTOLEASE</fullName>
            </value>
            <value>
                <fullName>FCA BANK</fullName>
            </value>
            <value>
                <fullName>ALD</fullName>
            </value>
            <value>
                <fullName>Jaguar Land Rover Financial Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>