force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Finance_Reference__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Finance_Reference__c</fullName>
    <description>Unique agreement or reference number for the finance contract, proposal or calculation.</description>
    <inlineHelpText>Unique agreement or reference number for the finance contract, proposal or calculation.</inlineHelpText>
    <label>Finance Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>