force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_FinanceInstitution__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_FinanceInstitution__c</fullName>
    <description>Finance Institution used on quote.</description>
    <label>Finance Institution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>