force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Flat_Rate__c</fullName>
    <description>Interest rate of contract expressed as flat rate. Used to calculate credit charges (interest on contract).  Only applicable if NO residual.</description>
    <inlineHelpText>Interest rate of contract expressed as flat rate. Used to calculate credit charges (interest on contract).  Only applicable if NO residual.</inlineHelpText>
    <label>Flat Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>