force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Installment_Amount__c</fullName>
    <description>Value of instalment repayments.</description>
    <inlineHelpText>Value of instalment repayments.</inlineHelpText>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>