force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Invoice_Price__c</fullName>
    <description>The amount paid for the vehicle or the cash price used for the quotation.</description>
    <inlineHelpText>The amount paid for the vehicle or the cash price used for the quotation.</inlineHelpText>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>