force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_IsPosEquity__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_IsPosEquity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Positive Equity</label>
    <type>Checkbox</type>
</CustomField>