force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Lead__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Lead__c</fullName>
    <description>Related lead</description>
    <label>Lead</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Finance Information</relationshipLabel>
    <relationshipName>Finance_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>