force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Mileage_UOM__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Mileage_UOM__c</fullName>
    <description>UOM for mileage (miles/km).</description>
    <inlineHelpText>UOM for mileage (miles/km).</inlineHelpText>
    <label>Odometer UOM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>