force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_NoPayments__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_NoPayments__c</fullName>
    <label>Total Number of  Payments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>