force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Outstanding_Balance__c</fullName>
    <description>Amount remaining to pay on Finance Contract</description>
    <inlineHelpText>Amount remaining to pay on Finance Contract</inlineHelpText>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>