force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_PayProfile__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_PayProfile__c</fullName>
    <label>Payment Profile</label>
    <type>TextArea</type>
</CustomField>