force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_ProdName__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_ProdName__c</fullName>
    <description>Name of the finance product provided</description>
    <label>Finance Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>