force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Quote__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>LMS_Quote__c</referenceTo>
    <relationshipLabel>Finance Information</relationshipLabel>
    <relationshipName>Finance_Information</relationshipName>
    <type>Lookup</type>
</CustomField>