force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Residual_Value__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Residual_Value__c</fullName>
    <description>Residual Value of vehicle taking account of existing finance.</description>
    <inlineHelpText>Residual Value of vehicle taking account of existing finance.</inlineHelpText>
    <label>Residual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>