force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_SysLink__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_SysLink__c</fullName>
    <description>Link to Finance Offer in Finance System</description>
    <label>System Link</label>
    <type>Url</type>
</CustomField>