force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_Term__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_Term__c</fullName>
    <description>Length of the finance agreement/quotation in months.</description>
    <inlineHelpText>Length of the finance agreement/quotation in months.</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>