force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_TotalMileage__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_TotalMileage__c</fullName>
    <formula>LMS_FIN_Term__c * ( LMS_FIN_Annual_Contract_Mileage__c  / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>