force-app/main/default/objects/LMS_FinanceInformation__c/fields/LMS_FIN_TotalPayable__c.field-meta.xml
<CustomField>
    <fullName>LMS_FIN_TotalPayable__c</fullName>
    <formula>LMS_FIN_NoPayments__c  * LMS_FIN_Installment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>