force-app/main/default/objects/LMS_FinanceInformation__c/recordTypes/LMS_FIN_CentralFinancing.recordType-meta.xml
<RecordType>
    <fullName>LMS_FIN_CentralFinancing</fullName>
    <active>true</active>
    <description>Integrated non-leasing details of a finance offer (White-label financing)</description>
    <label>Central Financing</label>
</RecordType>