force-app/main/default/objects/LMS_FinanceInformation__c/recordTypes/LMS_FIN_CentralHire.recordType-meta.xml
<RecordType>
    <fullName>LMS_FIN_CentralHire</fullName>
    <active>true</active>
    <description>Integrated Contract Hire details of a finance offer (White-label leasing)</description>
    <label>Central Contract Hire</label>
</RecordType>