force-app/main/default/objects/LMS_FinanceInformation__c/recordTypes/LMS_FIN_Indicative_Finance.recordType-meta.xml
<RecordType>
    <fullName>LMS_FIN_Indicative_Finance</fullName>
    <active>true</active>
    <label>Indicative Finance</label>
</RecordType>