force-app/main/default/objects/LMS_FinanceInformation__c/recordTypes/LMS_FIN_Lead.recordType-meta.xml
<RecordType>
    <fullName>LMS_FIN_Lead</fullName>
    <active>true</active>
    <description>Details of the finance package that the customer has expressed or is expected to be interested in</description>
    <label>Finance Lead</label>
</RecordType>