force-app/main/default/objects/LMS_FinanceInformation__c/recordTypes/LMS_FIN_LocalFinancing.recordType-meta.xml
<RecordType>
    <fullName>LMS_FIN_LocalFinancing</fullName>
    <active>true</active>
    <description>Locally recorded non-leasing details of finance offer (Non-white label financing offers)</description>
    <label>Local Financing</label>
</RecordType>