force-app/main/default/objects/LMS_FinanceInformation__c/recordTypes/LMS_FIN_LocalHire.recordType-meta.xml
<RecordType>
    <fullName>LMS_FIN_LocalHire</fullName>
    <active>true</active>
    <description>Locally recorded Contract Hire details of finance offer (Non-white label leasing offers)</description>
    <label>Local Contract Hire</label>
</RecordType>