force-app/main/default/objects/LMS_FinanceInformation__c/validationRules/LMS_FIN_CentralFinancingCantBeEdited.validationRule-meta.xml
<ValidationRule>
    <fullName>LMS_FIN_CentralFinancingCantBeEdited</fullName>
    <active>false</active>
    <description>Central Financing Cant Be Edited</description>
    <errorConditionFormula>$User.LMS_USR_TurnOffValidationRules__c =false
&amp;&amp;
 RecordType.DeveloperName=&quot;LMS_FIN_CentralFinancing&quot;
&amp;&amp;(
ISPICKVAL($User.LMS_USR_JobRole__c, &quot;Exec&quot;)
||
ISPICKVAL($User.LMS_USR_JobRole__c, &quot;Admin&quot;)
||
ISPICKVAL($User.LMS_USR_JobRole__c, &quot;Manager&quot;))</errorConditionFormula>
    <errorMessage>You do not have permission to edit this record.</errorMessage>
</ValidationRule>