force-app/main/default/objects/LMS_FinanceInformation__c/validationRules/LMS_FIN_PreventUsersFromSavingNullValues.validationRule-meta.xml
<ValidationRule>
    <fullName>LMS_FIN_PreventUsersFromSavingNullValues</fullName>
    <active>true</active>
    <errorConditionFormula>$User.LMS_USR_TurnOffValidationRules__c = false
		&amp;&amp;
		( ISNEW()|| ISCHANGED(RecordTypeId)|| ISCHANGED(LMS_FIN_Deposit__c) || ISCHANGED( LMS_FIN_AmountInWords__c ))
		&amp;&amp;
		(RecordType.DeveloperName=&quot;LMS_FIN_LocalFinancing&quot;)
		&amp;&amp;(
		(LMS_FIN_Deposit__c) &gt; 0 &amp;&amp; ISBLANK(LMS_FIN_AmountInWords__c) 
		)</errorConditionFormula>
    <errorMessage>Please fill Deposit amount in words.</errorMessage>
</ValidationRule>