force-app/main/default/objects/LMS_FinanceInformation__c/validationRules/LMS_FIN_QuoteMustBeChildOfOpportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>LMS_FIN_QuoteMustBeChildOfOpportunity</fullName>
    <active>true</active>
    <description>Validates if for Local Finance Information Quote set is the child of Lead set</description>
    <errorConditionFormula>$User.LMS_USR_TurnOffValidationRules__c = false &amp;&amp;
NOT(ISBLANK(LMS_FIN_Quote__c)) &amp;&amp; 
LMS_FIN_Quote__r.LMS_QUO_Opportunity__c !=  LMS_FIN_Lead__c</errorConditionFormula>
    <errorMessage>Quote used in this Finance Information is not part of the Lead used in this Finance Information.</errorMessage>
</ValidationRule>