force-app/main/default/objects/LMS_FinanceInformation__c/validationRules/LMS_PreventNewFINRecordAfterOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>LMS_PreventNewFINRecordAfterOrder</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNULL(LMS_FIN_Quote__c) &amp;&amp;  LMS_FIN_Quote__r.LMS_QUO_Opportunity__r.LMS_OPP_OrderCreated__c  &amp;&amp; (ISNEW() || (ISCHANGED(LMS_FIN_Status__c) &amp;&amp; !ISPICKVAL(LMS_FIN_Status__c, &quot;Rejected&quot;)
&amp;&amp; !(ISPICKVAL(LMS_FIN_Status__c, &quot;Activated&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(LMS_FIN_Status__c), &quot;Accepted&quot;))))</errorConditionFormula>
    <errorMessage>You are not able to create or change a finance record after the order has been created. You must clone the quote to make changes.</errorMessage>
</ValidationRule>