force-app/main/default/objects/LMS_FinanceInformation__c/validationRules/LMS_PreventNewFINRecordAfterQuoteAccept.validationRule-meta.xml
<ValidationRule>
    <fullName>LMS_PreventNewFINRecordAfterQuoteAccept</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; !ISNULL(LMS_FIN_Quote__c) &amp;&amp;  LMS_FIN_Quote__r.LMS_QUO_NoOfFinancialInformation__c &gt; 0</errorConditionFormula>
    <errorMessage>You are unable to create a new Finance Quote as there is already an accepted/activated Finance Quote.</errorMessage>
</ValidationRule>