force-app/main/default/objects/LMS_FinanceInformation__c/validationRules/Record_Type_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Type_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $User.LMS_USR_TurnOffValidationRules__c = false,
    $Profile.Name != &apos;System Administrator&apos;,
    AND(
    	ISCHANGED(RecordTypeId), 
    	OR(
    		PRIORVALUE(Record_Type_Name__c) = &apos;Central Financing&apos;, 
    		PRIORVALUE(Record_Type_Name__c) = &apos;Central Contract Hire&apos;
		)
	)
)</errorConditionFormula>
    <errorMessage>Cannot change the record type when already Central Financing or Central Contract Hire</errorMessage>
</ValidationRule>