force-app/main/default/objects/LMS_FinanceInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LMS_FIN_CentralFinancing__c</columns>
    <columns>LMS_FIN_Invoice_Price__c</columns>
    <columns>LMS_FIN_Deposit__c</columns>
    <columns>LMS_FIN_Contract_Start_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>LMS_NSC_Jordan</role>
    </sharedTo>
</ListView>